--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -22,6 +22,19 @@
     position: absolute;
 }
 
+.text-style {
+    color: #003057;
+}
+.header-style {
+    color: #003057;
+    font-style: bold;
+}
+
+.icon-size {
+    height: 25px;
+    width: 25px;
+}
+
 .form-icon {
     text-align: center;
     background-color: #003057;
