--- a/web/src/main/resources/templates/fragments/partnerForm.html
+++ b/web/src/main/resources/templates/fragments/partnerForm.html
@@ -1,40 +1,69 @@
 <!-- Partner Form -->
 <div xmlns:th="http://www.thymeleaf.org" th:fragment="partnerForm">
-    <form
-        id="partner-form"
-        class="w-50 mx-auto pt-5"
-        th:action="@{/register}"
-        th:object="${userDTO}"
-        method="post"
-        hidden>
 
-    <input type="hidden" name="userType" value="PARTNER">
-    <div class="mb-3">
-        <label for="businessName" class="form-label">Name</label>
-        <input type="text" class="form-control" id="businessName" aria-describedby="businessName">
+    <div class="w-50 mx-auto">
+        <form
+                id="partner-form"
+                class="row g-3 border form-border mt-3"
+                th:action="@{/register}"
+                method="post">
+            <div class="form-icon center mt-3">
+                <span><i class="icon icon-user"></i></span>
+            </div>
+            <input type="hidden" name="userType" value="PARTNER">
+            <div class="col-12"></div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="partnerUsername" class="form-label">Username</label>
+                <input type="text" class="form-control" id="partnerUsername" aria-describedby="partnerUsername">
+            </div>
+            <div class="col-md-6"></div>
+            <div class="col-5 ms-5 me-3">
+                <label for="partnerEmail" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="partnerEmail" aria-describedby="partnerEmail">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="col-5 ms-5 m-3">
+                <label for="partnerPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="partnerPassword" aria-describedby="partnerPassword">
+                <small id="passwordHelp" class="form-text text-muted">
+                    Must be 8-20 characters long.
+                </small>
+            </div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="partnerFirstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="partnerFirstName" aria-describedby="partnerFirstName">
+            </div>
+
+            <div class="col-md-5 ms-5 m-3">
+                <label for="partnerLastName" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="partnerLastName" aria-describedby="partnerLastName">
+            </div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="businessName" class="form-label">Business Name</label>
+                <input type="text" class="form-control" id="businessName" aria-describedby="businessName">
+            </div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="partnerPhone" class="form-label">Contact Number</label>
+                <input type="text" class="form-control" id="partnerPhone" aria-describedby="partnerPhone">
+            </div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="abn" class="form-label">Australian Business Number (ABN)</label>
+                <input type="text" class="form-control" id="abn" aria-describedby="abn">
+            </div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="positionDiscipline" class="form-label">Placement Position Discipline</label>
+                <select class="form-select" id="positionDiscipline" aria-label="positionDiscipline">
+                    <option selected>Select...</option>
+                    <option value="Software Development">Software Development</option>
+                    <option value="Networking">Networking</option>
+                    <option value="Business Analysis">Business Analysis</option>
+                    <option value="Project Management">Project Management</option>
+                </select>
+            </div>
+            <div class="form-group mb-3 text-center">
+                <button type="submit" class="btn form-button">Register</button>
+            </div>
+        </form>
     </div>
-
-    <div class="mb-3">
-        <label for="ABN" class="form-label">ABN</label>
-        <input type="text" class="form-control" id="ABN" aria-describedby="ABN">
-    </div>
-
-    <div class="mb-3">
-        <label for="contactPerson" class="form-label">Contact Person</label>
-        <input type="text" class="form-control" id="contactPerson" aria-describedby="contactPerson">
-    </div>
-
-    <div class="mb-3">
-        <label for="partnerEmail" class="form-label">Email Address</label>
-        <input type="email" class="form-control" id="partnerEmail" aria-describedby="partnerEmail">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-
-    <div class="mb-3">
-        <label for="partnerPhone" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="partnerPhone" aria-describedby="partnerPhone">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Register</button>
-    </form>
+    <div class="m-3"></div>
 </div>
