--- a/web/src/main/resources/templates/educator/EducatorProfile.html
+++ b/web/src/main/resources/templates/educator/EducatorProfile.html
@@ -89,7 +89,7 @@
 
             </div>
             <div class="col-sm-6">
-                <button type="button" class="btn btn-primary">Edit Profile</button>
+                <button type="button" class="btn btn-primary">Edit Bio</button>
             </div>
             <div class="row no-gutters d-flex justify-content-center ">
                 <div class="col-sm-9 ">
