--- a/web/src/main/resources/static/css/forum.css
+++ b/web/src/main/resources/static/css/forum.css
@@ -1,26 +1,81 @@
 .new-post-button {
-    color: whitesmoke !important;
-    background-color: #003057 !important;
-    margin-bottom: 0.75em;
+  color: whitesmoke !important;
+  background-color: #003057 !important;
+  margin-bottom: 0.75em;
 }
+
 .recent-posts {
-  border: solid 1px black;/* The box */
-  width: 60%;/* Just to illustrate a limited width box */
-  height: auto;/* Flexible depending on the number of recent posts */
-  padding: 5px;/* Consisten box padding */
-}
-.recent-posts > h2 {
-  font-size: 18px;/* Control the heading size */
-  margin-top: 0;/* Pull the heading up */
+  border: solid 1px black;
+  width: 60%;
+  height: auto;
+  padding: 5px;
 }
 
- .post-preview {
-   white-space: nowrap;/* Prevent the text going onto the next line */
-   overflow: hidden;/* Don't show any text outside of the box */
-   text-overflow: ellipsis;/* Show ... at the end */
-   list-style: disc inside;/* Restore bullet points */
- }
+.recent-posts>h2 {
+  font-size: 18px;
+  margin-top: 0;
+}
 
- .preview-list {
-   padding: 0;/* Pull the list to the left */
- }
+.post-preview {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  list-style: disc inside;
+}
+
+.preview-list {
+  padding: 0;
+}
+
+.select-box, div.multiselect-dropdown {
+  margin-bottom: 20px;
+  width: 100%;
+  border-radius: 5px;
+  min-height: 2rem;
+  border: solid 1px #202124;
+}
+
+.multiselect-dropdown span.placeholder {
+  display: none;
+}
+
+textarea {
+  border-radius: 5px;
+  margin-left: calc(var(--bs-gutter-x) * .5);
+  margin-right: calc(var(--bs-gutter-x) * .5);
+  width: -webkit-fill-available !important;
+}
+
+.subtitle {
+    color: grey;
+}
+
+.subtitle > small {
+  font-style: italic;
+}
+
+.reply {
+  color: darkslategrey;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  min-height: 50px;
+  padding: 5px;
+  margin: 10px;
+}
+
+.reply > small {
+  color: grey;
+  font-style: italic;
+}
+
+span.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 20
+}
+
+.hidden {
+ display: none;
+}
